--- a/.eslintrc
+++ b/.eslintrc
@@ -8,28 +8,28 @@
   },
   "parserOptions":{
     "ecmaVersion":2015,
-    "sourceType": "module",
+    //"sourceType": "module",
     "ecmaFeatures": {
       "jsx": true,
       "impliedStrict":true
     }
   },
   "rules": {
-    "indent": [2, 2, {SwitchCase: 1}],
+    "indent": [2, 2, {"SwitchCase": 1}],
     "block-spacing": 2,
     "brace-style": [2, "1tbs"],
-    "camelcase": [2, { properties: "never" }],
+    "camelcase": [2, { "properties": "never" }],
     "callback-return": [2, ["cb", "callback", "next"]],
     "comma-spacing": 2,
     "comma-style": [2, "last"],
     "consistent-return": 2,
     "curly": [2, "all"],
     "default-case": 2,
-    "dot-notation": [2, { allowKeywords: true }],
+    "dot-notation": [2, { "allowKeywords": true }],
     "eol-last": 2,
     "eqeqeq": 2,
     "guard-for-in": 2,
-    "key-spacing": [2, { beforeColon: false, afterColon: true }],
+    "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
     "keyword-spacing": 2,
     "linebreak-style": [ 2, "unix" ],
     "new-parens": 2,
@@ -77,21 +77,21 @@
     "no-undefined": 2,
     "no-underscore-dangle": 0,
     "no-unused-expressions": 2,
-    "no-unused-vars": [1, {vars: "all", args: "after-used"}],
+    "no-unused-vars": [1, {"vars": "all", "args": "after-used"}],
     "no-use-before-define": 2,
     "no-useless-concat": 2,
     "no-with": 2,
     "quotes": [2, "single"],
     "radix": 2,
     "semi": [2, "always"],
-    "semi-spacing": [2, {before: false, after: true}],
+    "semi-spacing": [2, {"before": false, "after": true}],
     "space-before-blocks": 2,
     "space-before-function-paren": [2, "never"],
     "space-infix-ops": 2,
-    "space-unary-ops": [2, {words: true, nonwords: false}],
-    "spaced-comment": [2, "always", { exceptions: ["-"]}],
-    "strict": [2, "global"],
-    "valid-jsdoc": [2, { prefer: { "return": "returns"}}],
+    "space-unary-ops": [2, {"words": true, "nonwords": false}],
+    "spaced-comment": [2, "always", { "exceptions": ["-"]}],
+    //"strict": [2, "global"],
+    "valid-jsdoc": [2, { "prefer": { "return": "returns"}}],
     "wrap-iife": 2,
     "yoda": [2, "never"]
   }
