--- a/.eslintrc
+++ b/.eslintrc
@@ -78,7 +78,7 @@
     "no-underscore-dangle": 0,
     "no-unused-expressions": 2,
     "no-unused-vars": [1, {"vars": "all", "args": "after-used"}],
-    "no-use-before-define": 2,
+    //"no-use-before-define": 2,
     "no-useless-concat": 2,
     "no-with": 2,
     "quotes": [2, "single"],
